# privatejet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: cli.rst  conf.py
docs/_build/doctrees/: environment.pickle  gettingstarted.doctree  index.doctree  middlewares.doctree  router.doctree
docs/_build/html/: .buildinfo  genindex.html  gettingstarted.html  index.html  middlewares.html  objects.inv  router.html  search.html  searchindex.js
docs/_build/html/_sources/: gettingstarted.rst.txt  index.rst.txt  middlewares.rst.txt  router.rst.txt
privatejet/: cli.py  main.py  middlewares.py  router.py
privatejet/boilerplates/: main.py
