[metadata]
name = privatejet
license = MIT
classifiers =
    Environment :: Web
    Framework :: privatejet
    OperatingSystem :: OS Independent
    Programming Language :: Python :: 3.12.1
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[flake8]
max-line-length = 88
exclude =
    .git
    .gitignore
    .vscode
    .idea
    .env
    .venv
    docs

[isort]
profile=black
skip = build,venv
skip_glob=**/docs
group_by_package=true
sections=FUTURE,STDLIB,,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[pylint]
disable = R0903, W0613